# REDl3east-cmake-doxygen-spinx-template

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst  introduction.md
